fix(front) : vertical align

--- a/packages/scss/src/components/indexTable/component.scss
+++ b/packages/scss/src/components/indexTable/component.scss
@@ -49,7 +49,7 @@
         .indexTable-body-row-cell,
         .indexTable-foot-row-cell {
             display: table-cell;
-            vertical-align: middle;
+            vertical-align: top;
             text-align: left;
             font-weight: 400;
         }
@@ -57,7 +57,6 @@
         .indexTable-head-row-transparentCell,
         .indexTable-body-row-transparentCell {
             padding: var(--spacings-XXS) 0;
-            vertical-align: top;
         }
 
         .indexTable-head-row-cell,
